--- a/index.html
+++ b/index.html
@@ -8,90 +8,136 @@
       /* GLOBAL STYLES */
       a
       {
-        color: red;
+        /* red=ff, green=00, blue=00, #ff0000 eq to #f00 eq to rgb(255,0,0) */
+        color: #f00;
+      }
+      html, body
+      {
+        margin: 0;
+        padding: 0;
+      }
+      h1
+      {
+        font-size: 2em;
+        margin-top: 0;
+      }
+
+      /* HERO STYLES */
+      .fullHero
+      {
+        background-color: #c7dbfc;
+        height: 50vh;
+        width: 75vw;
       }
 
       /* SOCIAL STYLES */
       .socialLink
       {
+        background: rgba(150, 150, 150, 0.5);
         color: blue;
       }
 
       /* BIO STYLES */
+      .bioWrapper
+      {
+
+      }
       .bioBox
       {
         border: 1px solid black;
+        font-size: 1em;
+        width: 50%;
+      }
+      .bioBox h3
+      {
+        font-size: 1.5em;
+      }
+      .bioCopy
+      {
+        font-size: 1em;
       }
       .bioCopy a
       {
         color: green;
       }
 
+      /* html{background: red;} generic division style */
+      /* div.bioBox
+      {
+        border: 1px solid green;
+      }
+      */
     </style>
   </head>
   <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-    </ul>
+    <div class="fullHero heroHome">
+      <!-- added socalLink styling to h1 -->
+      <!-- <h1 class="socialLink">I'm an h1</h1> -->
+      <h1>I'm an h1</h1>
+      <ul>
+        <li class="socialLink">
+          <a href="http://example.com/" class="socialLink">Link</a>
+        </li>
+        <li class="socialLink">
+          <a href="http://example.com/" class="socialLink">Link</a>
+        </li>
+        <li class="socialLink">
+          <a href="http://example.com/" class="socialLink">Link</a>
+        </li>
+      </ul>
+    </div>
     <h2>I'm an h2</h2>
-    <div class="bioBox">
-      <h3>Michael Hartl</h3>
-      <a href="http://twitter.com/mhartl" class="socialLink">here</a>
-      <div class="bioCopy">
-        <p>
-          Known for his dazzling charm, rapier wit, and unrivaled humility,
-          Michael is the creator of the
-          <a href="http://railstutorial.org/">Ruby on Rails
-          Tutorial</a> and principal author of the
-          <a href="https://learnenough.com/">
-          Learn Enough to Be Dangerous</a> introductory sequence. Michael
-          is also notorious as the founder of
-          <a href="http://tauday.com/">Tau Day</a> and author of
-          <a href="http://tauday.com/tau-manifesto"><em>The Tau
-          Manifesto</em></a>, but rumors that he's secretly a supervillain
-          are slightly exaggerated.
-        </p>
+    <div class="bioWrapper">
+      <div class="bioBox">
+        <h3>Michael Hartl</h3>
+        <a href="http://twitter.com/mhartl" class="socialLink">here</a>
+        <div class="bioCopy">
+          <p>
+            Known for his dazzling charm, rapier wit, and unrivaled humility,
+            Michael is the creator of the
+            <a href="http://railstutorial.org/">Ruby on Rails
+            Tutorial</a> and principal author of the
+            <a href="https://learnenough.com/">
+            Learn Enough to Be Dangerous</a> introductory sequence. Michael
+            is also notorious as the founder of
+            <a href="http://tauday.com/">Tau Day</a> and author of
+            <a href="http://tauday.com/tau-manifesto"><em>The Tau
+            Manifesto</em></a>, but rumors that he's secretly a supervillain
+            are slightly exaggerated.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="bioBox">
-      <h3>Lee Donahoe</h3>
-      <a href="https://twitter.com/leedonahoe" class="socialLink">here</a>
-      <div class="bioCopy">
-        <p>
-          When he's not literally swimming with sharks or hunting powder stashes on
-          his snowboard, you can find Lee in front of his computer designing
-          interfaces, doing front-end development, or writing some of the
-          interface-related Learn Enough tutorials.
-        </p>
+      <div class="bioBox">
+        <h3>Lee Donahoe</h3>
+        <a href="https://twitter.com/leedonahoe" class="socialLink">here</a>
+        <div class="bioCopy">
+          <p>
+            When he's not literally swimming with sharks or hunting powder stashes on
+            his snowboard, you can find Lee in front of his computer designing
+            interfaces, doing front-end development, or writing some of the
+            interface-related Learn Enough tutorials.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="bioBox">
-      <h3>Nick Merwin</h3>
-      <a href="https://twitter.com/nickmerwin" class="socialLink">here</a>
-      <div class="bioCopy">
-        <p>
-          You may have seen him shredding guitar live with Capital Cities on Jimmy
-          Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
-          heart. He's just as happy shredding well-spec'd lines of code from a tour
-          bus as he is from his kitchen table.
-        </p>
+      <div class="bioBox">
+        <h3>Nick Merwin</h3>
+        <a href="https://twitter.com/nickmerwin" class="socialLink">here</a>
+        <div class="bioCopy">
+          <p>
+            You may have seen him shredding guitar live with Capital Cities on Jimmy
+            Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
+            heart. He's just as happy shredding well-spec'd lines of code from a tour
+            bus as he is from his kitchen table.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="bioBox">
-      <h3>??</h3>
-      <a href="http://example.com/" class="socialLink">here</a>
-        <p>
-          The Future
-        </p>
+      <div class="bioBox">
+        <h3>??</h3>
+        <a href="http://example.com/" class="socialLink">here</a>
+          <p>
+            The Future
+          </p>
+      </div>
     </div>
   </body>
 </html>
